src/test/resources/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-service
  namespace: production
spec:
  type: ClusterIP
  ports:
  - port: 8090
    targetPort: 8090
  selector:
    component: counter-service
