src/test/resources/yaml/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: counter-service
  namespace: production
spec:
  gateways:
  - kyma-gateway.kyma-system.svc.cluster.local
  hosts:
  - counter-service.{DOMAIN}
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: counter-service
        port:
          number: 8090
